--- a/01.Cloud_Computing.md
+++ b/01.Cloud_Computing.md
@@ -18,6 +18,10 @@
 </ul>
 
 - Khi một cụm máy chủ vật lý (Server) – ổ cứng vật lý (Storage) – kết nối qua một hạ tầng mạng (Network) và được áp dụng các công nghệ để ảo hóa CV – SV – NV thì chúng ta mới có một đám mây điện toán!
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/01.01.jpg">
+
+
 ### Các dịch vụ điện toán đám mây
 
 -	Cloud Server (máy chủ ảo đám mây) là các máy chủ ảo tạo ra từ đám mây đó. 
@@ -30,7 +34,8 @@
 -	Ở thời điểm hiện tại, thì Điện toán đám mây đang chiếm lĩnh 3 mô hình dịch vụ, theo từng cấp độ khai thác: hạ tầng, nền tảng và phần mềm (dưới dạng dịch vụ cloud).
 -	Cũng lưu ý rằng rất nhiều nhà cung cấp triển khai cả 3 mô hình, hoặc một dịch vụ có thể phối hợp các mô hình với nhau.
  
-<img src="">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/01.02.jpg">
+
 
 ### Infrastructure as a Service (IaaS)
 
@@ -68,6 +73,10 @@ Tùy thuộc vào hình thức cung cấp và nhu cầu sử dụng mà Cloud Co
 - Nếu đáp ứng đúng tiêu chí Public Cloud hướng tới, thường dịch vụ phải đáp ứng Pay As You Go – tức là hình thức dịch vụ dùng bao nhiêu trả bấy nhiêu.
 - Dịch vụ dưới dạng Public Cloud cũng nên có khả năng mở rộng – thu nhỏ tài nguyên, hủy bỏ bởi chính khách hàng. Ví dụ chính xác nhất là các dịch vụ Amazon Web Service EC2 hay Google Compute Engine…
 -	Các dịch vụ Cloud Server (VPS Cloud & VPC Cloud) được triển khai trên Public Cloud.
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/01.03.jpg">
+  
   
 ### Private Cloud  
 
@@ -86,13 +95,18 @@ Tùy thuộc vào hình thức cung cấp và nhu cầu sử dụng mà Cloud Co
 -	Việc tự setup Private Cloud thường chỉ tối ưu cho các doanh nghiệp, tổ chức muốn tận dụng các phần cứng từ hạ tầng máy chủ cũ, thay vì phải thuê VPC từ các dịch vụ Public Cloud. Hoặc các doanh nghiệp tổ chức cần bảo mật dữ liệu tuyệt đối như Ngân hàng, …
 -	Còn đa phần doanh nghiệp hiện nay, thuê VPC từ các dịch vụ Public Cloud uy tín (Viettel IDC, FPT IDC, Google Cloud, AWS, MS Aruze…) là giải pháp kinh tế và hiệu quả, có thể giúp doanh nghiệp cắt giảm bớt nguồn nhân lực quản lý – bảo trì hệ thống máy chủ.
 
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/01.04.jpg">
+
+
+
  ### Hybrid Cloud
  
 - Là sự kết nối – chia sẻ có giới hạn giữa Private Cloud và Public Cloud, mục đích là tối ưu việc chia sẻ tài nguyên ảo hóa và tiện ích giữa Pubic và Private Cloud.
 - Thuật ngữ đám mây lai – Hybrid Cloud chủ yếu do các nhà cung cấp dịch vụ đưa ra, như một giải pháp cân bằng giữa tính bảo mật – an toàn của Private Cloud và sức mạnh của Public Cloud.
 
   
-  
+  <img src="https://github.com/lean15998/Openstack/blob/main/images/01.05.png">
   
   
   
