--- a/01.Cloud_Computing.md
+++ b/01.Cloud_Computing.md
@@ -109,7 +109,18 @@ Tùy thuộc vào hình thức cung cấp và nhu cầu sử dụng mà Cloud Co
   <img src="https://github.com/lean15998/Openstack/blob/main/images/01.05.png">
   
   
+# 3. Ưu nhược điểm 
   
-  
-  
+### Ưu điểm
+   - Tính sẵn sàng cao
+   - Cấp phát và quản lý tài nguyên linh hoạt
+   - Chi phí hợp lý (Pay as you go)
+   - Lưu trữ không giới hạn
+   - Sao lưu và phục hồi dễ dàng
+   - Dễ dàng truy cập mọi lúc mọi nơi
+   - Triển khai ứng dụng nhanh chóng (ứng dụng đám mây)
+### Nhược điểm
+   - Rủi ro về vấn đề kỹ thuật
+   - Vấn đề an toàn dữ liệu
+ 
   
