--- a/2.OpenStack.md
+++ b/2.OpenStack.md
@@ -2,8 +2,9 @@
 
 - OpenStack là một phần mềm mã nguồn mở, dùng để triển khai Cloud Computing, bao gồm private cloud và public.Vị trí của OpenStack trong thực tế.
 
-<img src="">
-
+<img src="https://github.com/lean15998/Openstack/blob/main/images/02.01.png">
+ 
+ 
 <ul>
   <ul>
     <li> Phía dưới là phần cứng đã được ảo hóa để chia sẻ cho ứng dụng, người dùng.
@@ -32,6 +33,8 @@
 </ul>
 
 # 2.Các thành phần chính
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/02.02.png">
 
 
 ### Keystone
