--- a/2.OpenStack.md
+++ b/2.OpenStack.md
@@ -37,7 +37,7 @@
 <img src="https://github.com/lean15998/Openstack/blob/main/images/02.02.png">
 
 
-### Keystone
+### Keystone – Identity Service
 
 - Keystone – Identity Service: Cung cấp dịch vụ xác thực và ủy quyền cho các dịch vụ khác của OpenStack, cung cấp danh mục của các endpoints cho tất các dịch vụ trong OpenStack.
 - Xác thực user và vấn đề token để truy cập vào các dịch vụ
@@ -46,7 +46,7 @@
 - Tạo các policy giữa user và dịch vụ.
 - Mỗi chức năng của Keystone có kiến trúc pluggable backend cho phép hỗ trợ kết hợp với LDAP, PAM, SQL.
 
-### Nova
+### Nova – Compute Service
 
 - Quản lí các máy ảo trong môi trường OpenStack, chịu trách nhiệm khởi tạo, lập lịch, ngừng hoạt động của các máy ảo theo yêu cầu.
 - Starting, resizing, stopping và querying máy ảo
@@ -56,14 +56,14 @@
 - Snapshot running instances
 - Nova hỗ trợ nhiều hypervisor: KVM, VMware, Xen, Docker…
 
-### Neutron
+### Neutron – Networking Service:
 
   - Cung cấp kết nối mạng như một dịch vụ (Network-Connectivity-as-a-Service) cho các dịch vụ khác của OpenStack, thay thế cho nova-network.
   - Cung cấp API cho người dùng để họ tạo các network của riêng mình và attach vào server interfaces.
   - Kiến trúc pluggable hỗ trợ các công nghệ khác nhau của các nhà cung cấp networking phổ biến.
   - Ngoài ra nó cũng cung cấp thêm các dịch vụ mạng khác như: FWaaS (Firewall as a service), LBaaS (Load balancing as a servie), VPNaaS (VPN as a service),...
 
-### Glance
+### Glance - Image Service
 
 Lưu trữ và truy xuất các disk images của các máy ảo của người dùng và các cloud services khác. OpenStack compute sẽ sử dụng chúng trong suốt quá trình dự phòng instances. Các tính năng chính:
 
