--- a/03.Install_Openstack.md
+++ b/03.Install_Openstack.md
@@ -1,1 +1,156 @@
+# 1. Cài đặt Openstack thủ công
+
+<a href="https://docs.openstack.org/install-guide/">Click here!</a>
+
+# 2. Cài đặt Openstack từ mã nguồn git với devstack
+
+<a href="https://docs.openstack.org/devstack/latest/">Click here!</a>
+
+# 3. Gii thiệu về Dashboad Openstack
+
+# 3.1. Đăng nhập
+
+- Dashboard thường được cài đặt trên node controller.
+- Để đăng nhập vào dashboard, nếu là client, cần phải biết hostname hoặc public IP và username/password. Tiếp theo, sử dụng trình duyệt hỗ trợ JavaScript và cookies. Để có thể console vào máy ảo, trình duyệt cần phải hỗ trợ HTML5 Canvas và HTML5 WebSockets.
+
+<img src="">
+
+- Nếu đăng nhập với tư cách là end user, dashboard sẽ hiển thị Project tab và Identity tab
+
+
+
+- Nếu đăng nhập với tư cách admin, dashboard sẽ hiển thị Project tab, Identity tab và Admin tab
+
+<img src="">
+
+# 3.2. Các tab chức năng
+
+### 3.2.1. Project tab
+
+- Projects là trung tâm tổ chức (organizational units) của cloud, nó còn được gọi là tenants hoặc accounts. Mỗi user là một thành viên của một hoặc nhiều projects. Với project, user có thể tạo và quản lý các máy ảo.
+- Ở tab project, bạn có thể xem và quản lý tài nguyên trong một project đã chọn bao gồm các máy ảo và file image.
+#### Từ project tab, có thể truy cập tới các thành phần sau:
+  - API Access: Xem các API endpoint.
+
+<img src="">
+
+  - Compute tab:
+
+<ul>
+  <ul>
+    <li> Overview: Xem thống kê của project.
+    <li> Instances: Xem, tạo máy ảo, tạo snapshot hoặc kết nối đến chúng thông qua VNC.
+    <li> Xem những image và snapshot máy ảo được tạo bởi user. Tạo, sửa và xoá images. Launch máy ảo từ image hoặc snapshot.
+    <li> Xem, tạo, sửa, nhập và xoá keypairs.
+  </ul>
+ </ul>
+
+- Volume tab:
+- 
+<ul>
+  <ul>
+    <li> Volumes: Xem, tạo, sửa và xoá các volume.
+    <li> Backups: Xem, tạo, sửa và xoá các backup.
+    <li> Snapshots: Xem, tạo, sửa và xoá các volume snapshot.
+  </ul>
+ </ul>
+
+- Network tab:
+
+<ul>
+  <ul>
+    <li> Network Topology: Xem mô hình mạng.
+    <li> Networks: Tạo và quản lý các public/private network.
+    <li> Routers: Tạo và quản lý router.
+    <li> Security Groups: Xem, tạo, sửa và xoá các security group và security group rule.
+    <li> Floating IPs: Cấp hoặc giải phóng một địa chỉ IP từ một project.
+  </ul>
+ </ul>
+
+### 3.2.2. Admin tab
+
+- Người quản trị có thể dùng Admin tab để xem mức độ sử dụng và quản lý các instance, volume, flavor, image, network,...
+
+#### Từ admin tab, có thể truy cập tới các thành phần sau:
+- Overview tab:Xem báo cáo
+- Compute tab:
+
+<ul>
+  <ul>
+    <li> Hypervisors: Xem thống kê hypervisor
+    <li> Host Aggregates: Xem, tạo và chỉnh sửa host aggregates. Xem danh sách availability zones.
+    <li> Instances: View, pause, resume, suspend, migrate, soft hoặc hard reboot, xoá các instance đang chạy thuộc về các user của một vài project. Cũng có thể xem log của instance hoặc truy cập instance qua VNC.
+    <li> Flavors: Xem, tạo, sửa, xem thông tin và xoá các flavor. Flavor chính là kích thước của máy ảo.
+    <li> Images: Xem, tạo, chỉnh sửa thuộc tính và xoá các image tuỳ chỉnh.
+  </ul>
+ </ul>
+
+- Volume tab:
+
+<ul>
+  <ul>
+    <li> Volumes: Xem, tạo, quản lý và xoá các volume.
+    <li> Snapshots: Xem, quản lý và xoá các volume snapshot.
+    <li> Volume Types: Xem, tạo, quản lý và xoá các volume type.
+    <li> Group Types: Xem, tạo, quản lý và xoá các group type.
+  </ul>
+ </ul>
+
+
+- Network tab:
+
+<ul>
+  <ul>
+    <li> Networks: Xem, tạo, chỉnh sửa thuộc tính và xoá các network.
+    <li> Routers: Xem, tạo, chỉnh sửa thuộc tính và xoá các router.
+    <li> Floating IPs: Cấp một địa chỉ IP cho project hoặc giải phóng nó.
+    <li> RBAC Policies: Xem,tạo,quản lý, xóa các RBAC Policies.
+  </ul>
+ </ul>
+
+- System tab:
+
+<ul>
+  <ul>
+    <li> Defaults: Xem các giá trị quotas mặc định. Quotas cho biết các kích thước tối đa và số lượng tài nguyên.
+    <li> Metadata Definitions: Import namespace và xem các thông tin metadata.
+    <li> System Information: Sử dụng các tab sau để xem thông tin service.
+  </ul>
+ </ul>
+
+### 3.2.3. Identity tab
+
+<ul>
+  <ul>
+    <li> Domains: Xem, quản lý các domain.
+    <li> Project: Xem, tạo, quản lý, xóa các Project.
+    <li> User: Xem, tạo, quản lý, xóa các user.
+    <li> Groups: Xem, tạo, quản lý, xóa các group.
+    <li> Roles: Xem, tạo, chỉnh sửa, xóa các role.
+    <li> Application Credentials: Roles: Xem, tạo, chỉnh sửa, xóa các application credentials.
+  </ul>
+ </ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
