--- a/03.Install_Openstack.md
+++ b/03.Install_Openstack.md
@@ -6,7 +6,7 @@
 
 <a href="https://docs.openstack.org/devstack/latest/">Click here!</a>
 
-# 3. Gii thiệu về Dashboad Openstack
+# 3. Giới thiệu về Dashboad Openstack
 
 # 3.1. Đăng nhập
 
