--- a/03.Install_Openstack.md
+++ b/03.Install_Openstack.md
@@ -13,15 +13,16 @@
 - Dashboard thường được cài đặt trên node controller.
 - Để đăng nhập vào dashboard, nếu là client, cần phải biết hostname hoặc public IP và username/password. Tiếp theo, sử dụng trình duyệt hỗ trợ JavaScript và cookies. Để có thể console vào máy ảo, trình duyệt cần phải hỗ trợ HTML5 Canvas và HTML5 WebSockets.
 
-<img src="">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.2.png">
 
 - Nếu đăng nhập với tư cách là end user, dashboard sẽ hiển thị Project tab và Identity tab
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.1.png">
 
 
 - Nếu đăng nhập với tư cách admin, dashboard sẽ hiển thị Project tab, Identity tab và Admin tab
 
-<img src="">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.3.png">
 
 # 3.2. Các tab chức năng
 
@@ -32,7 +33,7 @@
 #### Từ project tab, có thể truy cập tới các thành phần sau:
   - API Access: Xem các API endpoint.
 
-<img src="">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.4.png">
 
   - Compute tab:
 
