--- a/04.Keystone.md
+++ b/04.Keystone.md
@@ -1,1 +1,278 @@
+# 1. Tổng quan về Keystone
+
+## 1.1. Keystone là gì?
+
+Keystone là một Openstack project cung cấp các dịch vụ Identify, Token, Catalog, Policy cho các dịch vụ khác trong Openstack. Keystone Gồm hai phiên bản:
+- v2: sử dụng UUID
+- v3: sử dụng PKI, sử dụng một cặp key mở và đóng để xác minh chéo và xác thực. Hai tính năng chính của Keystone:
+<ul>
+  <ul>
+    <li> User Managerment: Keystone giúp xác thực tài khoản người dụng và chỉ định xem người dùng có quyền gì.
+    <li> Service Catalog: Cung cấp một danh mục các dịch vụ sẵn sàng cùng với các API endpoint để truy cập các dịch vụ đó.
+  </ul>
+</ul>
+
+## 1.2. Các chức năng chính của Keystone
+
+Trong môi trường Openstack, điểm quan trọng trong bảo mật cloud chính là Keystone – dịch vụ định danh Identity của Openstack. Keystone cung cấp rất nhiều chức năng:
+
+- **Identity – Định danh**: 
+
+  - Đề cập tới việc định danh cho người dùng đang truy cập vào tài nguyên của Openstack, định danh đơn giản được hiểu là đại diện cho một user. 
+
+  - Trong mô hình triển khai đơn giản, định danh cho user có thể được lưu trong database của Keystone.
+
+  -  Trong mô hình doanh nghiệp, lớn, cần đến một nhà cung cấp định danh thường được sử dụng.
+
+- **Authentication – Xác thực**: 
+
+  - Là quá trình xử lý sự hợp lệ của định danh user. 
+
+  - Trong nhiều trường hợp, sự xác thực là việc thực hiện đầu tiên cho user bằng cách login vào hệ thống với user identity và mật khấu. 
+
+  - Trong môi trường OPS thô sơ,  Keystone có khả năng tự tạo ra các bước xác thực bởi chính nó. 
+
+- **Access Management (Authorization)**:
+
+  -  Một user identity đã được xác thực và được tạo, cấp phát token, mọi thức bắt đầu thú vị.Đến đây đã có đủ nền tảng để bắt đầu Access management. 
+
+  - Access Management cũng như là xác thực, là quá trình kiểm tra xem những tài nguyên nào user được phép truy cập. Môi trường cloud cung cấp cho user khả năng truy cập lượng lớn tài nguyên. 
+
+  - Ví dụ, cần phải có một cơ chế để kiểm tra xem những user nào được phép tạo những loại máy ảo đặc biệt, người dùng nào được phép gán hoặc xóa volumn trong khối lưu trữ, người dùng nào được phép tạo mạng ảo, …. 
+
+  - Trong OPS, Keystone maps ***User*** tới ***Project*** hoặc ***Domain*** bằng cách liên kết ***Role*** cho người dùng tới các Project và Domain đó. Các project khác trong OPS như Nova, Cinder và Neutron kiểm tra Project của User và xem Role được gán cùng, đánh giá cá thông tin này sử dụng một cơ chế chính sách.. Cơ chế này sẽ kiểm tra những thông tin này và quyết định về những hành động mà user được phép thực hiện .
+
+
+- **Một số chức năng khác**: Trong khi Keystone hầu hết tập trung và việc cung cấp khả năng định danh, xác thực và ủy quyền, nó còn cung cấp nhiều lợi ích khác cho OPS như:
+
+  -	***Cung cấp sự xác thực và ủy quyền cho tất cả các dịch vụ khác của OPS***: Keystone giải quyết vấn đề phức tạp trong việc kết hợp xác thực hệ thống external và cũng cung cấp sự xác thực giống nhau cho tất cả các dịch vụ khác của OPS như Nova, Glance, Cinder, Neutron, … và do đó cô lập tất cả các dịch vụ từ việc biết cách làm thế nào để phân biệt định danh và xác thực giữa các dịch vụ.
+
+  -	***Cung cấp sự đăng ký cho các container (Project)*** để các dịch vụ khác của OPS cần sử dụng để phân chia tài nguyên.
+
+  -	***Cung cấp việc đăng ký các domain*** được sử dụng để định nghĩa phân chia namespace cho các user, group và các project để cho phép phân chia giữa các khách hàng.
+
+  -	***Tạo các role*** sẽ được sử dụng để xác thực giữa Keystone và các file chính sách trong mỗi dịch vụ của OPS.
+
+  -	***Tạo sự kết nối*** cho phép user và group được kết nối với các role trên project và domain.
+
+  -	***Catalog - mục lục*** lưu trữ các các dịch vụ, enpoints, và regions của OPS, cho phép các clients tìm ra dịch vụ hoặc enpoint mà họ cần.
+
+## 1.3. Một số khái niệm và thành phần
+
+- **Authentication**: Là quá trình xác nhận danh tính của người dùng dựa trên thông tin đăng nhập của người đó(credential)). Khi xác thực được danh tính người dùng, nó cấp cho người dùng một token xác thực. Người dùng sẽ cung cấp token đó cho mỗi yêu cầu sau đó.
+- **Credentials**: Là thông tin dùng để xác thực người dùng. Ví dụ như username, password và API key, hay là token mà được cung cấp.
+- **Domain**: Là một thực thể API v3 dịch vụ nhận dạng, tập hợp của các project cà người dùng để xác định danh giới để quản trị xác thực. Có thể là một cá nhân hay tổ chức, hoặc của nhà quản trị.
+ - **User**: Đại diện cho một người dùng, hệ thống hay dịch vụ mà sử dụng dịch vụ Openstack.
+- **Group**: Là một thực thể API v3 dịch vụ nhận dạng, là một nhóm những người dùng nằm trong một domain. Quyền của một group được thêm vào một domain hay một project sẽ được áp dụng cho tất cả user của group đó.
+- **Project**: sử dụng để nhóm hoặc cô lập tài nguyên, hoặc định danh các đối tượng. User và Group kết nối với role để có thể truy cập tài nguyên trong project.
+- **Region**: Là một thực thể API v3 dịch vụ nhận dạng, đại diện cho một bộ phận chung trong triển khai Openstack. Có thể tạo và liên kết chúng với các region phụ để tạo cấu trúc dạng cây. Region không có ý nghĩa về mặt địa lý nhưng tên của region thường được đặt theo tên khu vực địa lý(vd: asia-east)
+- **Roles**: Là tập hợp các quyền hạn và đặc quyền của người dùng để thực hiện các hành động cụ thể. Token được gửi đến người dùng sau khi xác thực sẽ bao gồm cả một tập hợp các quyền. Khi người dùng yêu cầu một dịch vụ, dịch vụ này sẽ kiểm tra quyền hạn của người dùng và cung cấp dịch vụ trong quyền hạn đó.
+- **Service**: Một dịch vụ Openstack, như Compute (nova), Object Storage (swift), hay Image service (glance), là một hay nhiều endpoint mà qua đó người dùng có thể truy cập tài nguyên và thực hiện các hành động.
+- **Token**: Một chuỗi gồm chữ và chữ số cho phép truy cập vào các tài nguyên và API Openstack.Token sẽ được keystone gửi cho user khi user đã được xác thực thành công.Token có thể bị thu hồi bất kỳ lúc nào và có giá trị trong thời gian hữu hạn.
+- **Endpoint**: Là một địa chỉ truy cập mạng, thường là địa chỉ URL của một dịch vụ để từ đó truy cập vào dịch vụ.
+- **Role Assignment**: Một role assignment là sự kết hợp của một user hoặc group, một project hoặc domain , và một role.
+- **Catalog**: Chứa các URL và các endpoint của các dịch vụ.
+
+## 1.4. Dịch vụ Identity
+
+**Identify service**(dịch vụ xác thực) trong keystone được cung cấp bởi các **Actors**. Nó có thể tới từ nhiều dịch vụ như SQL, LDAP và Federated Identify Providers.
+
+### SQL
+- Keystone có tùy chọn cho phép lưu các actor trong SQL. Nó hỗ trợ các database như MySQL, PostgreSQL,...
+- Keystone sẽ lưu trữ thông tin như username, password, mô tả,...
+- Cài đặt cho database này sẽ nằm trong file config của keystone.
+- Về bản chất, Keystone sẽ hoạt động như 1 Identity Provider. Vì thế đây sẽ không phải là lựa chọn tốt nhất trong một vài trường hợp, nhất là đối với các khách hàng là doanh nghiệp
+- Ưu điểm:
+    - Dễ cài đặt.
+    - Quản lý user, group thông qua Openstack API.
+- Nhược điểm:
+    - Keystone không nên là Identify service.
+    - Hỗ trợ cả mật khấu yếu.
+    - Hầu hết các doanh nghiệp đều dùng LDAP.
+    - Phải ghi nhớ username và password.
+
+### LDAP
+- Keystone cũng có tuỳ chọn cho phép lưu trữ actors trong LDAP
+- Keystone sẽ truy cập tới LDAP như bất kỳ ứng dụng khác (System Login, Email, Web Application,...)
+- Các cài đặt kết nối sẽ được lưu trong file config của Keystone. Các cài đặt này cũng bao gồm tuỳ chọn cho phép Keystone được ghi hoặc chỉ đọc dữ liệu từ LDAP.
+- Thông thường LDAP chỉ nên cho phép các câu lệnh đọc, ví dụ như tìm kiếm user, group và xác thực
+- Nếu sử dụng LDAP như một read-only Identity Backends thì Keystone cần có quyền sử dụng LDAP
+- Ưu điểm:
+    - Không cần sao lưu tài khoản người dùng.
+    - Keystone không hoạt động như một Identity Provider.
+- Nhược điểm:
+    - Account của các dịch vụ sẽ lưu ở trong LDAP và người quản trị LDAP không muốn có tài khoản này trong LDAP.
+    - Keystone có thể thấy mật khẩu người dùng, lúc mật khẩu được yêu cầu authentication.
+
+### Multiple backends
+
+- Kể từ bản Juno thì Keystone đã hỗ trợ nhiều Identity backends cho V3 Identity API. Nhờ vậy mà mỗi một domain có thể có một identity source (backend) khác nhau.
+- Domain mặc định thường sử dụng SQL backend bởi nó được dùng để lưu các host service accounts. Service accounts là các tài khoản được dùng bởi các dịch vụ OpenStack khác nhau để tương tác với Keystone.
+- Việc sử dụng Multiple Backends được lấy cảm hứng trong các môi trường doanh nghiệp, LDAP chỉ được sử dụng để lưu thông tin của các nhân viên bởi LDAP admin có thể không ở cùng một công ty với nhóm triển khai OpenStack. Bên cạnh đó, nhiều LDAP cũng có thể được sử dụng trong trường hợp công ty có nhiều phòng ban.
+- Ưu điểm:
+    - Cho phép việc sử dụng nhiều LDAP để lưu tài khoản người dùng và SQL để lưu tài khoản dịch vụ
+    - Sử dụng lại LDAP đã có sẵn.
+- Nhược điểm:
+    - Phức tạp trong việc thiết lập
+    - Xác thực tài khoản người dùng phải trong miền scoped.
+
+### Identity Providers
+- Kể từ bản Icehouse thì Keystone đã có thể sử dụng các liên kết xác thực thông qua module Apache cho các **Identity Providers**(nhà cung cấp dịch vụ xác thực) khác nhau.
+- Cơ bản thì Keystone sẽ sử dụng một bên thứ 3 để xác thực, nó có thể là những phần mềm sử dụng các backends (LDAP, AD, MongoDB) hoặc mạng xã hội (Google, Facebook, Twitter).
+- Ưu điểm:
+    - Có thể tận dụng phần mềm và cơ sở hạ tầng cũ để xác thực cũng như lấy thông tin của users.
+    - Tách biệt keystone và nhiệm vụ định danh, xác thực thông tin.
+    - Keystone không thể xem mật khẩu.
+- Nhược điểm:
+    - Phức tạp nhất về việc thiết lập.
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.03.png">
+
+## 1.5. Authentication 
+
+Có nhiều các để xác thực với keystone nhưng có hai cách phổ biến nhất là dùng password và dùng token.
+
+### Password
+- Phương thức phổ biến nhất cho người dùng hay dịch vụ để xác thực là dùng password. Đoạn payload sau là ví dụ về một POST request đến Keystone với xác thực bằng password. Người dùng cso thể nhận được nhưng thông tin cần thiết cho việc xác thực.
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.04.png">
+
+- Payload phải chứa đủ thông tin để tìm kiếm, xác thực user và lấy danh sách catalog service dựa theo quyền của user theo project cụ thể.
+- User section nhận diện thông tin domain trừ khi user globally unique ID được sử dụng để tránh nhầm lẫn giữa các user trùng tên.
+- Scope section là tuỳ chọn nhưng thường được sử dụng để user thu thập service catalog. Scope được sử dụng để xác định project nào user được làm việc. Nếu user không có role trên project, request sẽ bị loại bỏ. Tương tự như user section, scope section phải có đủ thông tin về project để tìm nó, domain phải được chỉ định, bởi project name cũng có thể trùng nhau giữa các domain khác nhau. Trừ khi cung cấp project ID, khi đó không cần thông tin domain nữa.
+- User request token bằng username, password và project scope. Token sau đó sẽ được sử dụng ở các OpenStack service khác.
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.04.png">
+
+### Token
+- Tương tự như password, user có thể yêu cầu một token mới từ token hiện tại. Payload của POST request:
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.05.png">
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.06.png">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 2.Tìm hiểu Token trong Keystone.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# 3. Làm việc với keystone
+
+
+
+
 
