--- a/06.Nova.md
+++ b/06.Nova.md
@@ -1,1 +1,141 @@
+# 1. Tổng quan về nova
+
+## 1.1. Khái niệm
+- OpenStack Nova là một project core trong Openstack, nhằm mục đích cấp phép các tài nguyên và quản lý số lượng lớn máy ảo . Compute sắp xếp các máy ảo chạy trên các node bằng cách làm việc với các driver ảo hóa , cung cấp phần mở rộng để làm việc với các compoment khác của Openstack
+Openstack Compute yêu cầu một số service khác để thực hiện một số task cơ bản :
+<ul>
+  <ul>
+<li> Indentify service để xác thực. 
+<li> Glance để sử dụng các image cho các  instance.  
+<li> Neutron để cung cấp mạng ảo hoặc vật lý cho các compute instance.
+<li> Ngoài ra còn có thể tương tác với các service khác : block storage, disk, baremetal compute instance.
+  </ul>
+</ul>
+
+Openstack Compute cung cấp một số phương thức để  làm việc :
+<ul>
+  <ul>
+<li> Horizon : cung cấp Web-Based cho người dùng , làm việc thông qua API
+<li> Openstack Client  : là một CLI toàn cục của Openstack. Sử dụng API này có thể làm việc không chỉ với nova mà mới các service khác
+<li> Nova Client : CLI được cung cấp bởi nova, có thể sử dụng thay thế Openstack Client
+  </ul>
+</ul>
+
+## 1.2. Các dịch vụ của Nova
+
+\- **API server**    
+API server là trái tim của cloud framwork, nơi thực hiện các lệnh và điều khiển hypervisor, storage và networking sẵn có đến users.  
+API endpoint cơ bản là HTTP web services, xử lý authentication, authorization, và các câu lệnh cơ bản và chức năng điều khiển sử dụng API interface khác nhau của Amazon, Rackspace, và các mô hình liên quan khác. Điều này cho phép sự tương thích API với nhiều bộ tool để tương tác với các vendor khác nhau. Khả năng tương thích rộng này ngăn chặn vấn đề phụ thuộc vào nhà cung cấp dịch vụ.  
+\- **Message queue**  
+Messaging queue được xem như môi giới tương tác giữa các compute nodes, networking contrllers ( phần mềm điều khiển cơ sở hạ tầng network), API endpoints, scheduler (xác định physical hardware cần phân bố cho tài nguyên ảo) và thành phần tương tự.  
+Giao tiếp đến và từ could controller được xử lý bởi HTTP request thông qua nhiều API endpoints.  
+Một sự kiện bắt đầu với thông điệp tiêu biểu mà API server nhận được từ yêu cầu của user. API server chứng thực user và đảm bảo user được phép đưa ra lệnh đó. Nếu các object liên quan đến yêu cầu là sẵn có thì yêu cầu sẽ được chuyển đến queuing engine cho những worker liên quan. Workers liên tục lắng nghe quêu dựa trên role của họ. Khi đến lượt yêu cầu được thực hiện, worker phân conng nhiệm vụ và thực hiện yêu cầu đó. Sau khi hoàn thành, phản hồi được gửi đến queue được nhận bởi API server  và chuyển tiếp tới user. Các thao tác truy vấn, nhập và xóa là cần thiết trong quá trình.  
+\- **Compute worker**  
+Compute worker quản lý computing instance trên host machine. API truyền lệnh đến compute worker để hoàn thành các tác vụ:  
+- Run instances
+- Delete instances
+- Reboot instances
+- Attach volumes
+- Detach volumes
+- Get console output
+
+\- **Network Controller**  
+Network Controller quản lý tài quyền networking trên host machine. API server gửi các lệnh thông qua message queue, sau đó được xử lý bởi Network Controllers.  
+- Cấp phát fixed IP address
+- Cấu hình VLANs cho projects
+- Cấu hình network cho compute node
+
+
+
+## 1.3. Kiến trúc Openstack Nova
+
+
+- Nova yêu cầu nhiều process trên server , mỗi process đảm nhiệm một function riêng, tạo nên cấu trúc nova. Người dùng có thể giao tiếp với Nova thông qua các REST API , trong khi đó các compoments trong Nova giao tiêp với nhau thông qua các bản tin theo cơ chế RPC
+- Nova API Server xử lý các yêu cầu , thông thường sẽ làm việc  read/write với database, sau đó các Compment Nova sẽ giao tiếp qua RPC và repesonse . Các bản tin RFC thực hiện thông qua thư viện **oslo.messaging**, 
+
+- Các thành phần trong Nova
+
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.01.png">
+
+Trong đó :
+- indentify-service : làm việc với keystone ... để xác thực request.
+- nova-api : Xử lý các yêu cầu và cung cấp quyền truy cập vào các dịch vụ trong Nova (chẳng hạn như khởi động một thể hiện).
+- nova-sheduler : xác định host để chứa máy ảo.
+- nova-cert : cung cấp phần quản lý Certificate khi làm việc với EC2 API.
+- nova-compute : khởi tạo , quản lý vòng đời của các máy ảo, tương tác với hypervisorc API để khởi tạo máy ảo, gửi gửi trạng thái máy ảo vào Database .
+- nova-consoleauth : ủy quyền user cho phép đi tới console proxy .
+- nova-network : Xử lý , tính toán các vấn đề về network, xử lý nhiều task ví dụ như gắn IP cho một máy ảo mới , và áp dụng các network security rule cho các mảy ảo.
+- nova-placement-api :  cung cấp API cho phép nhìn tổng quan về các resouce đang rảnh trên các Compute Node  và lập kế hoạch để tạo máy ảo.ví dụ như IP floating, Disk , RAM, CPU.
+- nova-novncproxy : cung cấp VNC proxy , cho phép người dùng console máy ảo thông qua brower.
+- nova-scheduler : xác nhận yêu cầu tạo mới máy ảo , nhận thông tin và đặt lịch tạo máy ảo mới trên node cụ thể.
+- nova-conductor : Trung gian tương tác giữa nova-compute service và databases. Nó loại bỏ truy cập trực tiếp vào cloud databases được thực hiện vởi nova-compute service nhằm mục đích bảo mật, tránh trường hợp máy ảo bị xóa mà không có chủ ý của người dùng.
+- rabbitmq-server : cung cấp server làm nhiệm vụ xây dựng hàng đợi message AMQP.   Server này (cũng được sử dụng bởi Block Storage) xử lý việc quản lý giao dịch OpenStack, bao gồm xếp hàng, phân phối, bảo mật, quản lý, phân cụm và liên kết. 
+- libvirtd : một trình điều khiển cho hypervisor, quản lý vòng đời máy ảo thông qua các message API.
+- KVM Linux hypervisor : hỗ trợ libvirt ,sử dụng KVM Module trong hypervisor. Các hypervisor tạo ra các máy ảo và cho phép di chuyển trực tiếp từ nút này sang nút khác. 
+- Database : cung cấp realtime trạng thái mảy ảo.
+- nova-volume : quản lý vòng đời các ổ đĩa ảo của các instance.
+
+## 1.4. Quá trình boot một VM
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.02.png">
+
+Workflow khi boot một VM:
+
+1.  Client (có thể là Horizon hoặc CLI) hỏi tới keystone-api để xác thực và generate ra token.
+    
+2.  Nếu quá trình xác thực thành công, client sẽ gửi request khởi chạy máy ảo tới nova-api. Giống câu lệnh  `nova boot`.
+    
+3.  Nova service sẽ kiểm tra token và nhận lại header với roles và permissions từ keystone-api.
+    
+4.  Nova API gửi lệnh tới nova conductor kiểm tra trong database conflicts hay không để khởi tạo một entry mới.
+    
+5.  Nova-api gửi RPC tới nova-scheduler service để lên lịch cho máy ảo.
+    
+6.  Nova-scheduler lấy request từ message queue
+    
+7.  Nova-scheduler service sẽ tìm compute host thích hợp trong database thông qua filters và weights. Lúc này database sẽ cập nhật lại entry của máy ảo với host ID phù hợp nhận được từ nova-scheduler. Sau đó scheduler sẽ gửi RPC call tới nova-compute để khởi tạo máy ảo.
+    
+8.  nova-compute lấy request từ message queue.
+    
+9.  nova-compute hỏi nova-conductor để lấy thông tin về máy ảo như host ID, flavor. (nova-compute lấy các thông tin này từ database thông qua nova-conductor vì lý do bảo mật, tránh trường hợp nova-compute mang theo yêu cầu bất hợp lệ tới instance entry trong database)
+    
+10.  nova-conductor lấy request từ message queue.
+    
+11.  nova-conductor lấy thông tin máy ảo từ database. sau đó gửi về cho nova-compute
+    
+12.  nova-compute lấy thông tin máy ảo từ queue. Tại thời điểm này, compute host đã biết được image nào sẽ được sử dụng để chạy máy ảo. nova-compute sẽ hỏi tới glance-api để lấy url của image.
+    
+13.  Glance-api sẽ xác thực token và gửi lại metadata của image trong đó bao gồm cả url của nó.
+    
+14.  Nova-compute sẽ đưa token tới neutron-api và hỏi nó về network cho máy ảo.
+    
+15.  Sau khi xác thực token, neutron sẽ tiến hành cấu hình network.
+    
+16.  Nova-compute tương tác với cinder-api để gán volume vào máy ảo.
+    
+17.  Nova-compute sẽ generate dữ liệu cho Hypervisor và gửi thông tin thông qua libvirt.
+
+
+
+## 2.5 Chuyển tiếp trạng thái của VM
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/06.03.png">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
