--- a/06.Nova.md
+++ b/06.Nova.md
@@ -59,22 +59,30 @@ Network Controller quản lý tài quyền networking trên host machine. API se
 <img src="https://github.com/lean15998/Openstack/blob/main/images/06.01.png">
 
 Trong đó :
-- indentify-service : làm việc với keystone ... để xác thực request.
-- nova-api : Xử lý các yêu cầu và cung cấp quyền truy cập vào các dịch vụ trong Nova (chẳng hạn như khởi động một thể hiện).
-- nova-sheduler : xác định host để chứa máy ảo.
-- nova-cert : cung cấp phần quản lý Certificate khi làm việc với EC2 API.
-- nova-compute : khởi tạo , quản lý vòng đời của các máy ảo, tương tác với hypervisorc API để khởi tạo máy ảo, gửi gửi trạng thái máy ảo vào Database .
-- nova-consoleauth : ủy quyền user cho phép đi tới console proxy .
-- nova-network : Xử lý , tính toán các vấn đề về network, xử lý nhiều task ví dụ như gắn IP cho một máy ảo mới , và áp dụng các network security rule cho các mảy ảo.
-- nova-placement-api :  cung cấp API cho phép nhìn tổng quan về các resouce đang rảnh trên các Compute Node  và lập kế hoạch để tạo máy ảo.ví dụ như IP floating, Disk , RAM, CPU.
-- nova-novncproxy : cung cấp VNC proxy , cho phép người dùng console máy ảo thông qua brower.
-- nova-scheduler : xác nhận yêu cầu tạo mới máy ảo , nhận thông tin và đặt lịch tạo máy ảo mới trên node cụ thể.
-- nova-conductor : Trung gian tương tác giữa nova-compute service và databases. Nó loại bỏ truy cập trực tiếp vào cloud databases được thực hiện vởi nova-compute service nhằm mục đích bảo mật, tránh trường hợp máy ảo bị xóa mà không có chủ ý của người dùng.
-- rabbitmq-server : cung cấp server làm nhiệm vụ xây dựng hàng đợi message AMQP.   Server này (cũng được sử dụng bởi Block Storage) xử lý việc quản lý giao dịch OpenStack, bao gồm xếp hàng, phân phối, bảo mật, quản lý, phân cụm và liên kết. 
-- libvirtd : một trình điều khiển cho hypervisor, quản lý vòng đời máy ảo thông qua các message API.
-- KVM Linux hypervisor : hỗ trợ libvirt ,sử dụng KVM Module trong hypervisor. Các hypervisor tạo ra các máy ảo và cho phép di chuyển trực tiếp từ nút này sang nút khác. 
-- Database : cung cấp realtime trạng thái mảy ảo.
-- nova-volume : quản lý vòng đời các ổ đĩa ảo của các instance.
+- **indentify-service** : làm việc với keystone để xác thực request.
+- **nova-api** : Xử lý các yêu cầu và cung cấp quyền truy cập vào các dịch vụ trong Nova (chẳng hạn như khởi động một thể hiện).
+- **nova-sheduler** : xác định host để chứa máy ảo.
+- **nova-cert** : cung cấp phần quản lý Certificate khi làm việc với EC2 API.
+- **nova-compute** : khởi tạo , quản lý vòng đời của các máy ảo, tương tác với hypervisorc API để khởi tạo máy ảo, gửi gửi trạng thái máy ảo vào Database .
+- **nova-consoleauth** : ủy quyền user cho phép đi tới console proxy .
+- **nova-network** : Xử lý , tính toán các vấn đề về network, xử lý nhiều task ví dụ như gắn IP cho một máy ảo mới , và áp dụng các network security rule cho các mảy ảo.
+- **nova-placement-api** :  cung cấp API cho phép nhìn tổng quan về các resouce đang rảnh trên các Compute Node  và lập kế hoạch để tạo máy ảo.ví dụ như IP floating, Disk , RAM, CPU.
+- **nova-novncproxy** : cung cấp VNC proxy , cho phép người dùng console máy ảo thông qua brower.
+- **nova-scheduler** : xác nhận yêu cầu tạo mới máy ảo , nhận thông tin và đặt lịch tạo máy ảo mới trên node cụ thể.
+- **nova-conductor** : Trung gian tương tác giữa nova-compute service và databases. Nó loại bỏ truy cập trực tiếp vào cloud databases được thực hiện vởi nova-compute service nhằm mục đích bảo mật, tránh trường hợp máy ảo bị xóa mà không có chủ ý của người dùng.
+- **rabbitmq-server** : cung cấp server làm nhiệm vụ xây dựng hàng đợi message AMQP.   Server này (cũng được sử dụng bởi Block Storage) xử lý việc quản lý giao dịch OpenStack, bao gồm xếp hàng, phân phối, bảo mật, quản lý, phân cụm và liên kết. 
+- **libvirtd** : một trình điều khiển cho hypervisor, quản lý vòng đời máy ảo thông qua các message API.
+- **KVM Linux hypervisor** : hỗ trợ libvirt ,sử dụng KVM Module trong hypervisor. Các hypervisor tạo ra các máy ảo và cho phép di chuyển trực tiếp từ nút này sang nút khác. 
+- **Database** : Lưu trữ hầu hết các trạng thái tại build-time và run-time của cloud infrastructure, bao gồm:
+<ul>
+  <ul>
+    <li> Các loại instance đang có sẵn.
+    <li> Instances đang sử dụng.
+    <li> Networks có sẵn.
+    <li> Projects.
+  </ul>
+</ul>
+- **nova-volume** : quản lý vòng đời các ổ đĩa ảo của các instance.
 
 ## 1.4. Quá trình boot một VM
 
