--- a/08.Cinder.md
+++ b/08.Cinder.md
@@ -20,7 +20,7 @@
 
 ## 1.2. Kiến trúc Cinder
 
-<img src="">
+<img src="https://github.com/lean15998/Openstack/blob/main/images/08.01.png">
 
 - cinder-volume : quản lý vòng đời volume cho các máy ảo theo yêu cầu . Khi có một request từ sheduler , volume service sẽ tạo, chỉnh sửa, xóa các volume theo yêu cầu. Một số các driver sẽ được sử dụng để làm việc với storage provider.
 - cinder-api : trả lời và xử lý theo yêu cầu, gửi các tin nhắn vào hàng chờ . Khi có một request gửi đến, các API nhờ indentify service để xác thực , sau đó gửi thông điệp để làm việc với các block storage.
