--- a/04.Keystone.md
+++ b/04.Keystone.md
@@ -369,7 +369,50 @@ max_active_keys = (token_expiration / rotation_frequency) + 2
 - Do fernet token có thể được tái tạo lại dựa trên phần còn lại của backend data nên nó làm giảm đáng kể lưu lượng.
 # 3. Làm việc với keystone
 
+## 3.1. Làm việc qua CLI
+
+### Khởi tạo token
 
 
+- Tạo file biến môi trường chứa thông tin đăng nhập của user (VD: admin,demo...)
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.27.png">
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.28.png">
+
+- Kiểm tra token đã được cấp
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.29.png">
+
+- Khi người dùng được xác thực, một token được gửi đến và ủy quyền để được tác động đến các Service khác .Mã token có thể biến đổi, tuy nhiên giá trị mặc định cho hết hạn là một giờ.Trước khi task hòan thành mà token hết hạn thì có thể bị ngừng tác tác động tiếp theo đến các service.
+
+### Quản lý user
+
+- Khởi tạo một domain (VD: domain1)
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.30.png">
+
+- Khởi tạo một project(VD: project1)
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.31.png">
+
+- Khởi tạo một user (VD: quynv)
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.32.png">
+
+- Khởi tạo một role (VD: role1)
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.33.png">
 
 
+- Gắn role1 vào user quynv trong project1
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.34.png">
+
+- Kiểm tra trạng thái project
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.35.png">
+
+- Kiểm tra trạng thái user
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/04.36.png">
