--- a/04.Keystone.md
+++ b/04.Keystone.md
@@ -416,3 +416,28 @@ max_active_keys = (token_expiration / rotation_frequency) + 2
 - Kiểm tra trạng thái user
 
 <img src="https://github.com/lean15998/Openstack/blob/main/images/03.35.png">
+
+- Liệt kê danh sách các service
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.37.png">
+
+- Khởi tạo một service
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.38.png">
+
+
+## 3.2 Làm việc với Dashboard
+
+
+- Khởi tạo một project
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.39.png">
+
+- Khởi tạo một user
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.40.png">
+
+- Khởi tạo một role
+
+<img src="https://github.com/lean15998/Openstack/blob/main/images/03.41.png">
+
+
