--- a/05.Glance.md
+++ b/05.Glance.md
@@ -89,17 +89,25 @@ Dưới đây là một số thuộc tính phổ biến của image:
 - **description**: Một mô tả ngắn gọn dạng humman-readable, phù hợp để hiển thị trên giao diện người dùng cho image đó.
 
 
+# 2 Làm việc với Glance
 
+## 2.1 Làm việc với Glance qua CLI
 
+- Tạo một image mới
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.06.png">
 
+- Liệt kê danh sách image
+- 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.07.png">
 
+- Show thông tin của một image
 
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.08.png">
 
+- Xóa một image
 
-
-
-
+<img src="https://github.com/lean15998/Openstack/blob/main/images/05.09.png">
 
 
 
